--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,11 @@
         android:id="@+id/ErroSenha"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:textColor="@android:color/holo_red_dark"
         app:layout_constraintEnd_toEndOf="@+id/editTextPass"
         app:layout_constraintStart_toStartOf="@+id/editTextPass"
