--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,23 +17,12 @@
         android:layout_marginRight="16dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="E-mail"
+        android:hint="Usuário"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/ErroEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:textColor="@android:color/holo_red_dark"
-        app:layout_constraintStart_toStartOf="@+id/editTextUser"
-        app:layout_constraintTop_toBottomOf="@+id/editTextUser" />
 
     <EditText
         android:id="@+id/editTextPass"
@@ -46,7 +35,7 @@
         android:hint="Senha"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ErroEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextUser" />
 
     <TextView
         android:id="@+id/ErroSenha"
