--- a/app/src/main/res/layout/activity_owasp.xml
+++ b/app/src/main/res/layout/activity_owasp.xml
@@ -5,13 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Main2Activity">
+    tools:context=".OwaspActivity">
 
     <WebView
-        android:id="@+id/webview"
+        android:id="@+id/owasp_webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-    </WebView>
-
+        android:layout_height="match_parent" />
 </LinearLayout>
